@@ -1,4 +1,6 @@
 ######## 2016-03-07 ########
+alter table supplychain_supply_schedule_manage_detail add column is_approved tinyint(1) default 0;
+######## 2016-03-07 ########
 alter table flashsale_xlmm_fans add column fans_nick varchar(32) default null;
 alter table flashsale_xlmm_fans add column fans_thumbnail varchar(256) default null;
 ######## 2016-03-05 ########
